<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountain"
    tools:context=".AddNewVideoActivity">


    <Button
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_rectangle"
        android:text="Record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vidPath"
        android:layout_width="364dp"
        android:layout_height="77dp"
        android:layout_below="@+id/record"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:text="Path of file"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadName" />

    <Button
        android:id="@+id/vidFilePick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_rectangle"
        android:layout_marginTop="10dp"
        android:text="pick Video file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vidPath" />

    <TextView
        android:id="@+id/gpsPath"
        android:layout_width="354dp"
        android:layout_height="84dp"
        android:layout_below="@+id/record"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:text="Path of file"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vidFilePick" />

    <Button
        android:id="@+id/gpsFilePick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_rectangle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="pick GPS file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpsPath" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="upload Files"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vidprogressBar" />

    <ProgressBar
        android:id="@+id/vidprogressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpsFilePick" />

    <EditText
        android:id="@+id/uploadName"
        android:layout_width="339dp"
        android:layout_height="66dp"
        android:layout_below="@+id/record"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_edit_text_rounded"
        android:ems="10"
        android:hint="Enter a unique upload name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record" />
</androidx.constraintlayout.widget.ConstraintLayout>