...
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="93dp"
        android:layout_height="82dp"
        android:layout_alignBottom="@+id/videoView"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="-203dp"
        android:layout_toStartOf="@+id/textView2"
        android:contentDescription="submit"
        android:src="@drawable/refresh" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
...
